HexaEngine.DirectXTex/Native.cs


        //---------------------------------------------------------------------------------
        // Direct3D 12 functions
#if D3D12
    [DllImport(LibName, CharSet = CharSet.Unicode, CallingConvention = CallingConvention.Cdecl)]
    public static unsafe extern bool IsSupportedTexture(in ID3D12Device* pDevice, in TexMetadata* metadata);
    [DllImport(LibName, CharSet = CharSet.Unicode, CallingConvention = CallingConvention.Cdecl)]
    public static unsafe extern int CreateTexture(in ID3D12Device* pDevice, in TexMetadata* metadata, ID3D12Resource** ppResource);
    [DllImport(LibName, CharSet = CharSet.Unicode, CallingConvention = CallingConvention.Cdecl)]
    public static unsafe extern int CreateTextureEx(in ID3D12Device* pDevice, in TexMetadata* metadata, in D3D12_RESOURCE_FLAGS resFlags, in bool forceSRGB, ID3D12Resource** ppResource);
    [DllImport(LibName, CharSet = CharSet.Unicode, CallingConvention = CallingConvention.Cdecl)]
    public static unsafe extern int PrepareUpload(in ID3D12Device* pDevice, Image* srcImages, in ulong nimages, in TexMetadata* metadata, std::vector<D3D12_SUBRESOURCE_DATA> &subresources);
    [DllImport(LibName, CharSet = CharSet.Unicode, CallingConvention = CallingConvention.Cdecl)]
    public static unsafe extern int CaptureTexture(in ID3D12CommandQueue* pCommandQueue, in ID3D12Resource* pSource, in bool isCubeMap, void* result, in D3D12_RESOURCE_STATES beforeState = D3D12_RESOURCE_STATE_RENDER_TARGET, in D3D12_RESOURCE_STATES afterState = D3D12_RESOURCE_STATE_RENDER_TARGET);
#endif
    }
}